--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://pakeapa.com
 title: pakeapa
-subtitle: people and their stuff.
+subtitle: people and their stuffs
 author: dedenf
 simple_search: http://google.com/search
 description:
