--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:           pretty
 
 # Setup
 title:            Pakeapa
-tagline:          'Setup / Tips / interview'
+tagline:          'Setup/Tips/Interview'
 description:      'Pakeapa.com, interview dengan professional, daily people di indonesia tentang apa yang mereka kerjakan dan lakukan, peralatan apa yang dibawa buat membantu pekerjaan dan getting things done.'
 url:              http://pakeapa.com
 
