update more file and header

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title:            Pakeapa
 tagline:          'Setup/Tips/Interview'
 description:      'Pakeapa.com, interview dengan professional, daily people di indonesia tentang apa yang mereka kerjakan dan lakukan, peralatan apa yang dibawa buat membantu pekerjaan dan getting things done.'
 url:              http://pakeapa.com
-
+baseurl: 		  ""
 # author:
 #   name:           'Deden Fathurahman'
 #   url:            http://github.com/dedef
