change timezone on the config

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,9 @@ tagline:          'Setup/Tips/Interview'
 description:      'Pakeapa.com, interview dengan professional, daily people di indonesia tentang apa yang mereka kerjakan dan lakukan, peralatan apa yang dibawa buat membantu pekerjaan dan getting things done.'
 url:              http://pakeapa.com
 baseurl: 		  ""
+
+timezone: "Asia/Jakarta"
+
 # author:
 #   name:           'Deden Fathurahman'
 #   url:            http://github.com/dedef
