--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ version:          1.0.0
 github:
   repo:           https://github.com/pakeapa/pakeapa.github.io
 
-gems:
+plugins:
   - jemoji
   - jekyll-paginate
 
